--- a/tailwind.css
+++ b/tailwind.css
@@ -8,6 +8,9 @@
   html {
     font-family: var(--font-family);
   }
+  body {
+    padding-top: 178px;
+  }
 
   /** Remove default styles from input[type=number] */
   input[type=number]::-webkit-inner-spin-button,
@@ -24,9 +27,6 @@
 
 @layer components {
 
-  body {
-    background-color: linear-gradient(180deg, #000 0%, #F0F0F0 100%);
-  }
   /** Prevent scroll when modal is open */
   .no-scroll {
     overflow: hidden;
@@ -98,14 +98,43 @@
   .scrollbar-none::-webkit-scrollbar {
     display: none;
   }
-
-  .fade-in {
-    animation: fade-in linear;
-    animation-timeline: view(100px);
+  
+  .adjust-nav {
+    animation: adjust-nav linear forwards;
+    animation-timeline: scroll();
+    animation-range: cover 0% cover 534px;
   }
 
-  @keyframes fade-in {
-    from { scale: 0 }
-    to { scale: 1 }
+  @keyframes adjust-nav {
+    0%, 49.9% {
+      justify-content: center;
+    }
+    50%, 100% {
+      justify-content: start;
+    }
+  }
+
+  .make-aside {
+    animation: make-aside linear forwards;
+    animation-timeline: scroll();
+    animation-range: cover 0% cover 534px;
+  }
+  @keyframes make-aside {
+    0%, 49.9% {
+      width: 100vw;
+      background: #f4f4f4;
+      top: 0;
+      left: auto;
+      border-color: #e2e2e2;
+    }
+    50%, 100% {
+      width: 272px;
+      background: #ffffff33;
+      top: 200px;
+      left: 24px;
+      border-radius: 12px;
+      backdrop-filter: blur(12px);
+      border: 1px solid #e2e2e2;
+    }
   }
 }
