--- a/tailwind.css
+++ b/tailwind.css
@@ -9,8 +9,14 @@
     font-family: var(--font-family);
   }
   body {
-    padding-top: 178px;
+    padding-top: 114px;
   }
+  @media screen and (min-width: 1024px) {
+    body {
+      padding-top: 258px;
+    }
+  }
+
 
   /** Remove default styles from input[type=number] */
   input[type=number]::-webkit-inner-spin-button,
@@ -98,12 +104,6 @@
   .scrollbar-none::-webkit-scrollbar {
     display: none;
   }
-  
-  .adjust-nav {
-    animation: adjust-nav linear forwards;
-    animation-timeline: scroll();
-    animation-range: cover 0% cover 534px;
-  }
 
   @keyframes adjust-nav {
     0%, 49.9% {
@@ -114,11 +114,24 @@
     }
   }
 
-  .make-aside {
-    animation: make-aside linear forwards;
-    animation-timeline: scroll();
-    animation-range: cover 0% cover 534px;
+  @keyframes adjust-links {
+    0%, 49.9% {
+      align-items: center;
+    }
+    50%, 100% {
+      align-items: start;
+    }
   }
+  @keyframes adjust-direction {
+    0%, 49.9% {
+      flex-direction: row;
+    }
+    50%, 100% {
+      flex-direction: column;
+      width: 100%;
+    }
+  }
+
   @keyframes make-aside {
     0%, 49.9% {
       width: 100vw;
@@ -137,4 +150,28 @@
       border: 1px solid #e2e2e2;
     }
   }
+
+  @media screen and (min-width: 1024px) {
+    .adjust-nav {
+      animation: adjust-nav linear forwards;
+      animation-timeline: scroll();
+      animation-range: cover 0% cover 534px;
+    }
+    .adjust-links {
+      animation: adjust-links linear forwards;
+      animation-timeline: scroll();
+      animation-range: cover 0% cover 534px;
+    }
+    .adjust-direction {
+      animation: adjust-direction linear forwards;
+      animation-timeline: scroll();
+      animation-range: cover 0% cover 534px;
+    }
+    .make-aside {
+      animation: make-aside linear forwards;
+      animation-timeline: scroll();
+      animation-range: cover 0% cover 534px;
+    }
+  }
+
 }
