--- a/tailwind.css
+++ b/tailwind.css
@@ -174,4 +174,17 @@
     }
   }
 
+  #my-drawer:checked + label span:nth-of-type(1) {
+    position: absolute;
+    rotate: 45deg;
+    transform-origin: center;
+  }
+  #my-drawer:checked + label span:nth-of-type(2) {
+    opacity: 0;
+  }
+  #my-drawer:checked + label span:nth-of-type(3) {
+    position: absolute;
+    rotate: -45deg;
+    transform-origin: center;
+  }
 }
