--- a/tailwind.css
+++ b/tailwind.css
@@ -105,6 +105,15 @@
     display: none;
   }
 
+  @keyframes adjust-item {
+    0%, 49.9% {
+      width: auto;
+    }
+    50%, 100% {
+      width: 100%;
+      text-align: center;
+    }
+  }
   @keyframes adjust-nav {
     0%, 49.9% {
       justify-content: center;
@@ -122,6 +131,7 @@
       align-items: start;
     }
   }
+
   @keyframes adjust-direction {
     0%, 49.9% {
       flex-direction: row;
@@ -152,21 +162,24 @@
   }
 
   @media screen and (min-width: 1024px) {
-    .adjust-nav {
-      animation: adjust-nav linear forwards;
+    .adjust-item {
+      animation: adjust-item linear forwards;
       animation-timeline: scroll();
       animation-range: cover 0% cover 534px;
     }
+
     .adjust-links {
       animation: adjust-links linear forwards;
       animation-timeline: scroll();
       animation-range: cover 0% cover 534px;
     }
+
     .adjust-direction {
       animation: adjust-direction linear forwards;
       animation-timeline: scroll();
       animation-range: cover 0% cover 534px;
     }
+    
     .make-aside {
       animation: make-aside linear forwards;
       animation-timeline: scroll();
